--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
-    "@uniswap/v3-periphery": "^1.4.1"
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@uniswap/v3-periphery": "^1.4.1",
+    "dotenv": "^16.0.1"
   }
 }
