--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.7.0",
+    "@openzeppelin/contracts": "3.4.2-solc-0.7",
     "@uniswap/v3-periphery": "^1.4.1",
     "dotenv": "^16.0.1"
   }
